Fix z-index for contact section

--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ p {
   position: fixed;
   top: 4vh;
   right: 4vh;
-  z-index: 0;
+  z-index: 1;
 }
 
 .contact li {
